# mini_projet

./: CMakeLists.txt  classement.c  classement.h  ecurie.c  ecurie.h  grand_prix.c  grand_prix.h  initialisation.c  initialisation.h  pilote.c  pilote.h  structures.h  verif.c  verif.h  visuel.c  visuel.h
